# LinuxBox-Installer

./: README.md  version.json
deb_repo/: README.md
deb_repo/thirdreality-flash-firmware/: build.sh  thirdreality-firmware-upgrade.service  upgrade_firmware.sh
deb_repo/thirdreality-hacore/: build.sh  default_config.patch  home-assistant.service  home_assistant_blz_reset.sh  home_assistant_boot_check.py  home_assistant_boot_check.sh  home_assistant_init.sh  home_assistant_z2m_enable.py  home_assistant_zha_enable.py  zha.patch  zigpy_cli.patch  zigpy_help.sh
deb_repo/thirdreality-hacore-config/: build.sh
deb_repo/thirdreality-hassio-config/: build.sh  home_assistant_init.sh
deb_repo/thirdreality-openHAB/: CMakeLists.txt  CMakePresets.json  README.md  README_en.md  reference.md  reference_en.md
deb_repo/thirdreality-openHAB/cmake/: config.cmake  node.cmake  openhab.cmake  zigbee2mqtt.cmake
deb_repo/thirdreality-openHAB/cmake/openhab/: openhab.service.in  postinst  postrm  prerm
deb_repo/thirdreality-openHAB/cmake/zigbee2mqtt/: build.sh  configuration.yaml.in  pnpm-workspace.yaml  postinst  postrm  prerm  zigbee2mqtt.service
deb_repo/thirdreality-openHAB/deb-package/: CMakeLists.txt
deb_repo/thirdreality-openHAB/deb-package/cmake/: node.cmake  openHAB.cmake  zigbee2mqtt.cmake
deb_repo/thirdreality-openHAB/deb-package/cmake/openhab/: openhab.service  postinst
deb_repo/thirdreality-openHAB/deb-package/cmake/zigbee2mqtt/: configuration.yaml  pnpm-workspace.yaml  postinst  postrm  prerm  zigbee2mqtt.service
deb_repo/thirdreality-otbr-agent/: build.sh  (+2 more)
(+52 files in other folders)
